Changed name from 'day' to 'conference'

--- a/CareerDayReg/CareerDayReg.html
+++ b/CareerDayReg/CareerDayReg.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Career Day Registration</title>
+  <title>Career Conference Registration</title>
 </head>
 
 <template name="main">
@@ -39,7 +39,7 @@
 </template>
 
 <template name="form">
-  <h1>Welcome to Career Day Registration</h1>
+  <h1>Welcome to Career Conference Registration</h1>
   <table>
 	<tr>
 		<td><h4>First Name</h4></td>
